feat: split the notebook inte cells

--- a/UNSW_NB15_Full_Grid.ipynb
+++ b/UNSW_NB15_Full_Grid.ipynb
@@ -1,23 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "header_cell"
+      },
       "source": [
         "# 🧪 UNSW-NB15 Manuscript Run (Draft Mode)\n",
         "\n",
@@ -33,23 +20,64 @@
         "**Est. Time**: ~45-60 mins\n",
         "\n",
         "---"
-      ],
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
-        "id": "header_cell"
-      }
+        "id": "mount_drive_cell"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "📁 Mounting Google Drive for Results...\n"
+          ]
+        },
+        {
+          "ename": "KeyboardInterrupt",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-760531406.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"📁 Mounting Google Drive for Results...\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mdrive\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmount\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/content/drive'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mDRIVE_BASE_DIR\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"/content/drive/MyDrive/UNSW_Archive\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/google/colab/drive.py\u001b[0m in \u001b[0;36mmount\u001b[0;34m(mountpoint, force_remount, timeout_ms, readonly)\u001b[0m\n\u001b[1;32m     95\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mmount\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmountpoint\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mforce_remount\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimeout_ms\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m120000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreadonly\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     96\u001b[0m   \u001b[0;34m\"\"\"Mount your Google Drive at the specified mountpoint path.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 97\u001b[0;31m   return _mount(\n\u001b[0m\u001b[1;32m     98\u001b[0m       \u001b[0mmountpoint\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     99\u001b[0m       \u001b[0mforce_remount\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mforce_remount\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/google/colab/drive.py\u001b[0m in \u001b[0;36m_mount\u001b[0;34m(mountpoint, force_remount, timeout_ms, ephemeral, readonly)\u001b[0m\n\u001b[1;32m    132\u001b[0m   )\n\u001b[1;32m    133\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mephemeral\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 134\u001b[0;31m     _message.blocking_request(\n\u001b[0m\u001b[1;32m    135\u001b[0m         \u001b[0;34m'request_auth'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    136\u001b[0m         \u001b[0mrequest\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'authType'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'dfs_ephemeral'\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/google/colab/_message.py\u001b[0m in \u001b[0;36mblocking_request\u001b[0;34m(request_type, request, timeout_sec, parent)\u001b[0m\n\u001b[1;32m    174\u001b[0m       \u001b[0mrequest_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrequest\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparent\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mparent\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexpect_reply\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    175\u001b[0m   )\n\u001b[0;32m--> 176\u001b[0;31m   \u001b[0;32mreturn\u001b[0m \u001b[0mread_reply_from_input\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrequest_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimeout_sec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/google/colab/_message.py\u001b[0m in \u001b[0;36mread_reply_from_input\u001b[0;34m(message_id, timeout_sec)\u001b[0m\n\u001b[1;32m     94\u001b[0m     \u001b[0mreply\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_read_next_input_message\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     95\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mreply\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0m_NOT_READY\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreply\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 96\u001b[0;31m       \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.025\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     97\u001b[0m       \u001b[0;32mcontinue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     98\u001b[0m     if (\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
+        }
+      ],
+      "source": [
+        "# ==========================================\n",
+        "# 1. MOUNT GOOGLE DRIVE\n",
+        "# ==========================================\n",
+        "from google.colab import drive\n",
+        "import os\n",
+        "\n",
+        "print(\"📁 Mounting Google Drive for Results...\")\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "DRIVE_BASE_DIR = \"/content/drive/MyDrive/UNSW_Archive\""
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "setup_cell",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "config_cell"
       },
       "outputs": [],
       "source": [
-        "# @title 🚀 **Run Manuscript Grid (18 Experiments)**\n",
-        "# @markdown ### Configuration\n",
-        "# @markdown Modify these settings as needed:\n",
+        "# ==========================================\n",
+        "# 2. CONFIGURATION\n",
+        "# ==========================================\n",
+        "# @title ⚙️ **Experiment Settings**\n",
         "\n",
         "REPO_URL = \"https://github.com/StartDust/ML_PAPER_REVIEW.git\"  # @param {type:\"string\"}\n",
         "BRANCH = \"main\"  # @param {type:\"string\"}\n",
@@ -57,39 +85,22 @@
         "FORCE_FRESH_RUN = True  # @param {type:\"boolean\"}\n",
         "SYNC_INTERVAL_SECONDS = 60  # @param {type:\"integer\"}\n",
         "\n",
-        "# @markdown ---\n",
-        "# @markdown ### Execution\n",
-        "# @markdown Click **Runtime > Run all** or press **Ctrl+F9** to start.\n",
-        "\n",
+        "PROJECT_DIR = \"/content/ml_project\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "clone_repo_cell"
+      },
+      "outputs": [],
+      "source": [
+        "# ==========================================\n",
+        "# 3. SETUP REPOSITORY\n",
+        "# ==========================================\n",
         "import os\n",
-        "import sys\n",
-        "import subprocess\n",
-        "import time\n",
-        "import shutil\n",
-        "from pathlib import Path\n",
-        "from datetime import datetime\n",
         "\n",
-        "PROJECT_DIR = \"/content/ml_project\"\n",
-        "DRIVE_BASE_DIR = \"/content/drive/MyDrive/UNSW_Archive\"\n",
-        "\n",
-        "# ==============================================================================\n",
-        "# STEP 1: Mount Google Drive\n",
-        "# ==============================================================================\n",
-        "print(\"📁 Mounting Google Drive for Results...\")\n",
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')\n",
-        "\n",
-        "# ==============================================================================\n",
-        "# STEP 2: Setup Unique Results Directory\n",
-        "# ==============================================================================\n",
-        "TIMESTAMP = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
-        "RESULTS_DIR = f\"{DRIVE_BASE_DIR}/run_draft_{TIMESTAMP}\"\n",
-        "os.makedirs(RESULTS_DIR, exist_ok=True)\n",
-        "print(f\"✅ Results will be saved to: {RESULTS_DIR}\")\n",
-        "\n",
-        "# ==============================================================================\n",
-        "# STEP 3: Clone or Update Repository\n",
-        "# ==============================================================================\n",
         "print(\"\\n📥 Setting up code from GitHub...\")\n",
         "\n",
         "if os.path.exists(PROJECT_DIR):\n",
@@ -100,19 +111,41 @@
         "    !git clone -b {BRANCH} {REPO_URL} {PROJECT_DIR}\n",
         "\n",
         "os.chdir(PROJECT_DIR)\n",
-        "print(f\"   📂 Working directory: {os.getcwd()}\")\n",
-        "\n",
-        "# ==============================================================================\n",
-        "# STEP 4: Install Dependencies\n",
-        "# ==============================================================================\n",
+        "print(f\"   📂 Working directory: {os.getcwd()}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "install_deps_cell"
+      },
+      "outputs": [],
+      "source": [
+        "# ==========================================\n",
+        "# 4. INSTALL DEPENDENCIES\n",
+        "# ==========================================\n",
         "print(\"\\n📦 Installing Dependencies...\")\n",
         "!pip install -q -r requirements.txt\n",
-        "\n",
-        "# ==============================================================================\n",
-        "# STEP 5: Optimize Configuration for Colab\n",
-        "# ==============================================================================\n",
-        "print(\"\\n⚙️  Optimizing Configuration for Colab...\")\n",
+        "print(\"   ✅ Dependencies installed.\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "optimize_config_cell"
+      },
+      "outputs": [],
+      "source": [
+        "# ==========================================\n",
+        "# 5. PREPARE CONFIGURATION\n",
+        "# ==========================================\n",
         "import yaml\n",
+        "import shutil\n",
+        "from pathlib import Path\n",
+        "\n",
+        "print(\"\\n⚙️  Optimizing Configuration for Colab...\")\n",
         "\n",
         "config_path = Path(PROJECT_DIR) / CONFIG_FILE\n",
         "temp_config_path = Path(PROJECT_DIR) / \"configs\" / \"colab_optimized.yaml\"\n",
@@ -144,11 +177,27 @@
         "with open(temp_config_path, \"w\") as f:\n",
         "    yaml.dump(config, f, default_flow_style=False)\n",
         "\n",
-        "print(f\"   ✅ Optimized config saved.\")\n",
+        "print(f\"   ✅ Optimized config saved.\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "setup_results_dir_cell"
+      },
+      "outputs": [],
+      "source": [
+        "# ==========================================\n",
+        "# 6. SETUP RESULTS DIRECTORY & CLEANUP\n",
+        "# ==========================================\n",
+        "from datetime import datetime\n",
         "\n",
-        "# ==============================================================================\n",
-        "# STEP 6: Clean Previous Results (if requested)\n",
-        "# ==============================================================================\n",
+        "TIMESTAMP = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
+        "RESULTS_DIR = f\"{DRIVE_BASE_DIR}/run_draft_{TIMESTAMP}\"\n",
+        "os.makedirs(RESULTS_DIR, exist_ok=True)\n",
+        "print(f\"✅ Results will be saved to: {RESULTS_DIR}\")\n",
+        "\n",
         "if FORCE_FRESH_RUN:\n",
         "    print(\"\\n🧹 Cleaning previous results for fresh run...\")\n",
         "    # Check both result dirs to be safe\n",
@@ -160,11 +209,24 @@
         "                print(f\"   ✅ Cleared {d}/metrics.\")\n",
         "            except: pass\n",
         "else:\n",
-        "    print(\"\\n🔄 Incremental mode: Keeping existing results.\")\n",
+        "    print(\"\\n🔄 Incremental mode: Keeping existing results.\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "run_experiments_cell"
+      },
+      "outputs": [],
+      "source": [
+        "# ==========================================\n",
+        "# 7. RUN EXPERIMENTS (With Sync)\n",
+        "# ==========================================\n",
+        "import sys\n",
+        "import subprocess\n",
+        "import time\n",
         "\n",
-        "# ==============================================================================\n",
-        "# STEP 7: Run Full Experiment Grid with Sync\n",
-        "# ==============================================================================\n",
         "print(\"\\n\" + \"=\" * 70)\n",
         "print(f\"🚀 STARTING MANUSCRIPT GRID (0-{TOTAL_EXPERIMENTS-1})\")\n",
         "print(\"=\" * 70)\n",
@@ -173,9 +235,6 @@
         "print(f\"   Drive Target:  {RESULTS_DIR}\")\n",
         "print(\"=\" * 70 + \"\\n\")\n",
         "\n",
-        "# Use generic result dir 'results' for the active run even if config says 'results_fast'\n",
-        "# (The script normally respects config, but we can check where output goes)\n",
-        "# Actually, main.py uses 'results_dir' from yaml. fast.yaml says 'results_fast'.\n",
         "LOCAL_RESULTS = str(Path(PROJECT_DIR) / config['results_dir'])\n",
         "print(f\"   ℹ️  Local Output: {LOCAL_RESULTS}\")\n",
         "\n",
@@ -202,7 +261,7 @@
         "        \n",
         "        current_time = time.time()\n",
         "        if current_time - last_sync_time >= SYNC_INTERVAL_SECONDS:\n",
-        "            # Added *.log to rsync includes\n",
+        "            # Sync including logs and CSVs\n",
         "            !rsync -avq --include='*/' --include='*.json' --include='*.png' --include='*.csv' --include='*.log' --exclude='*' {LOCAL_RESULTS}/ \"{RESULTS_DIR}/\"\n",
         "            print(f\"💾 Synced artifacts to Drive...\")\n",
         "            last_sync_time = current_time\n",
@@ -222,9 +281,23 @@
         "    proc.wait()\n",
         "    exit_code = 130\n",
         "\n",
-        "# ==============================================================================\n",
-        "# STEP 8: Final Sync and Cleanup\n",
-        "# ==============================================================================\n",
+        "if exit_code == 0:\n",
+        "    print(\"\\n✅ MANUSCRIPT RUN COMPLETED SUCCESSFULLY!\")\n",
+        "else:\n",
+        "    print(f\"\\n⚠️  Run completed with exit code {exit_code}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "final_sync_cell"
+      },
+      "outputs": [],
+      "source": [
+        "# ==========================================\n",
+        "# 8. FINAL SYNC\n",
+        "# ==========================================\n",
         "print(\"\\n📤 Performing final full sync to Drive...\")\n",
         "!rsync -av {LOCAL_RESULTS}/ \"{RESULTS_DIR}/\"\n",
         "\n",
@@ -232,45 +305,60 @@
         "    os.remove(temp_config_path)\n",
         "    print(f\"🗑️  Cleaned up temp config.\")\n",
         "\n",
-        "# ==============================================================================\n",
-        "# SUMMARY\n",
-        "# ==============================================================================\n",
         "print(\"\\n\" + \"=\" * 70)\n",
         "print(\"📊 EXECUTION SUMMARY\")\n",
         "print(\"=\" * 70)\n",
-        "print(f\"   Total Experiments: {TOTAL_EXPERIMENTS} (0-{TOTAL_EXPERIMENTS - 1})\")\n",
-        "print(f\"   Exit Code:         {exit_code}\")\n",
         "print(f\"   Results Saved To:  {RESULTS_DIR}\")\n",
         "print(f\"   Completed at:      {datetime.now().isoformat()}\")\n",
-        "\n",
-        "if exit_code == 0:\n",
-        "    print(\"\\n✅ MANUSCRIPT RUN COMPLETED SUCCESSFULLY!\")\n",
-        "else:\n",
-        "    print(f\"\\n⚠️  Run completed with exit code {exit_code}\")\n",
-        "\n",
         "print(\"=\" * 70)"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "results_cell"
+      },
       "source": [
         "---\n",
         "\n",
         "## 📁 View Results\n",
         "\n",
-        "Results will vary based on `CONFIG_FILE`. For `fast.yaml`, look in:\n",
+        "check your results in Google Drive:\n",
         "```\n",
         "My Drive/UNSW_Archive/run_draft_YYYYMMDD_HHMMSS/\n",
-        "├── metrics/          # 18 JSON files\n",
-        "├── tables/           # CSV Tables (Summary, Rare Class, Logs)\n",
-        "├── learning_curves/  # Training curves (XGBoost only - CSV/JSON)\n",
-        "├── logs/             # Execution logs (*.log)\n",
+        "├── metrics/\n",
+        "├── tables/\n",
+        "├── learning_curves/\n",
+        "├── logs/\n",
         "└── ...\n",
         "```"
-      ],
-      "metadata": {
-        "id": "results_cell"
-      }
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3 (ipykernel)",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.12"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
